--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
 }
 
 code {
@@ -15,4 +17,6 @@ code {
 canvas {
   display: block;
   background-color: black;
+  width: 100vw;
+  height: 100vh;
 }
